--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Time Machine theme
-description: Time Machine is a theme for GitHub Pages.
-show_downloads: true
+title: Owen Woodall
+description: Developer & Designer
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-time-machine
